# FinalTask

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt  Client.cpp  Client.h  Client.rc
CommonLibrary/: CMakeLists.txt  ScreenUtils.cpp  ScreenUtils.h  SharedMemoryManager.cpp  SharedMemoryManager.h
FinalTask/Client/: Client.cpp  Client.h  main.cpp  resource.h
FinalTask/CommonLibrary/: CMakeLists.txt  ReadMe.txt  SharedMemoryManager.cpp  SharedMemoryManager.h  stdafx.cpp
FinalTask/FinalTask/: Classes.classdiagram  FinalTask.modelproj
FinalTask/FinalTask/ModelDefinition/: FinalTask.uml
FinalTask/Helper/: Helper.cpp  Helper.h
FinalTask/Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
FinalTaskUML/: FinalTask.sln
FinalTaskUML/FinalTask/: Classes.classdiagram.layout  Communication.sequencediagram.layout
Helper/: CMakeLists.txt  Helper.cpp  Helper.h  main.cpp
Installer/: FinalTaskInstaller.wixproj  Product.wxs
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
UML/: Classes.classdiagram  Classes.classdiagram.layout  Communication.sequencediagram
UML/ModelDefinition/: FinalTask.uml
